--- a/test_plone60.cfg
+++ b/test_plone60.cfg
@@ -10,3 +10,52 @@ update-versions-file = test_plone60.cfg
 [versions]
 createcoverage = 1.5
 watchdog = 2.1.6
+
+# Added by buildout at 2023-05-31 14:12:17.102294
+bleach = 6.0.0
+coverage = 7.2.7
+i18ndude = 6.0.0
+keyring = 23.13.1
+markdown-it-py = 2.2.0
+mdurl = 0.1.2
+pkginfo = 1.9.6
+readme-renderer = 37.3
+requests-toolbelt = 1.0.0
+rfc3986 = 2.0.0
+rich = 13.3.5
+twine = 4.0.2
+zest.releaser = 8.0.0
+
+# Required by:
+# zest.releaser==8.0.0
+colorama = 0.4.6
+
+# Required by:
+# keyring==23.13.1
+jaraco.classes = 3.2.3
+
+# Required by:
+# jaraco.classes==3.2.3
+more-itertools = 9.1.0
+
+# Required by:
+# zest.releaser==8.0.0
+tomli = 2.0.1
+
+# Required by:
+# bleach==6.0.0
+webencodings = 0.5.1
+
+# Required by:
+# plone.webauthn==1.0a1
+z3c.jbot = 2.0
+
+# Added by buildout at 2023-06-01 04:49:31.366564
+
+# Required by:
+# zopyx.plone.persistentlogger==0.5.1
+loguru = 0.7.0
+
+# Required by:
+# plone.webauthn==1.0a1
+zopyx.plone.persistentlogger = 0.5.1
