--- a/.github/workflows/plone-package.yml
+++ b/.github/workflows/plone-package.yml
@@ -18,7 +18,7 @@ jobs:
                 plone-version:
                   - 'Plone52'
                   - 'Plone60'
-                python-version: [3.7, 3.8, 3.9]
+                python-version: [3.9]
 
         steps:
             - uses: actions/setup-python@v4
